--- a/api/templates/authentication-password.html
+++ b/api/templates/authentication-password.html
@@ -24,30 +24,26 @@
                 <a href="./index.html" class="text-nowrap logo-img text-center d-block py-3 w-100">
                   <img src="{% static 'images/logos/logo-light.svg'%}" alt="">
                 </a>
-                <p class="text-center">Your Social Campaigns</p>
+                <p class="text-center">Correo de recuperacion</p>
                 <form action="" method="post">
+                  {% csrf_token %}
                   <div class="mb-3">
-                    <label for="exampleInputtext1" class="form-label">Name</label>
-                    <input type="text" class="form-control" id="exampleInputtext1" aria-describedby="textHelp" required>
+                    <label for="exampleInputEmail1" class="form-label">Email</label>
+                    <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" required>
                   </div>
-                  <div class="mb-3">
-                    <label for="exampleInputEmail1" class="form-label">Email Address</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" required>
-                  </div>
-                  <div class="mb-4">
-                    <label for="exampleInputPassword1" class="form-label">Password</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1" required>
-                  </div>
-                  <div class="mb-4">
-                    <label for="exampleInputPassword1" class="form-label">Confirm Password</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1" required>
-                  </div>
-                  <a href="./index.html" class="btn btn-primary w-100 py-8 fs-4 mb-4">Sign Up</a>
+                  
+                  
+                  
+                  <bottom href={% url 'home' %} class="btn btn-primary w-100 py-8 fs-4 mb-4">Send</bottom>
+                  
                   <div class="d-flex align-items-center justify-content-center">
-                    <p class="fs-4 mb-0 fw-bold">Already have an Account?</p>
-                    <a class="text-primary fw-bold ms-2" href="{%url 'login'%}">Sign In</a>
+                    
+                    <p class="fs-4 mb-0 fw-bold">Remeber Your Account?</p>
+                    
+                    <a class="text-primary fw-bold ms-2" href="{%url 'login'%}">Log In</a>
                   </div>
                 </form>
+                
               </div>
             </div>
           </div>
