--- a/api/templates/authentication-login.html
+++ b/api/templates/authentication-login.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!doctype html>
 <html lang="en">
 
@@ -5,8 +6,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>SeoDash Free Bootstrap Admin Template by Adminmart</title>
-  <link rel="shortcut icon" type="image/png" href="../assets/images/logos/seodashlogo.png" />
-  <link rel="stylesheet" href="../assets/css/styles.min.css" />
+  <link rel="shortcut icon" type="image/png" href="{% static 'images/logos/seodashlogo.png'%}" />
+  <link rel="stylesheet" href="{% static 'css/styles.min.css'%}" />
 </head>
 
 <body>
@@ -21,33 +22,39 @@
             <div class="card mb-0">
               <div class="card-body">
                 <a href="./index.html" class="text-nowrap logo-img text-center d-block py-3 w-100">
-                  <img src="../assets/images/logos/logo-light.svg" alt="">
+                  <img src="{% static 'images/logos/logo-light.svg'%}" alt="">
                 </a>
                 <p class="text-center">Your Social Campaigns</p>
-                <form>
+                <form action="" method="post">
+                  {% csrf_token %}
                   <div class="mb-3">
                     <label for="exampleInputEmail1" class="form-label">Username</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                    <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" required>
                   </div>
                   <div class="mb-4">
                     <label for="exampleInputPassword1" class="form-label">Password</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1">
+                    <input type="password" class="form-control" id="exampleInputPassword1" required>
                   </div>
                   <div class="d-flex align-items-center justify-content-between mb-4">
                     <div class="form-check">
-                      <input class="form-check-input primary" type="checkbox" value="" id="flexCheckChecked" checked>
+                      <input class="form-check-input primary" type="checkbox" value="" id="flexCheckChecked" checked required>
                       <label class="form-check-label text-dark" for="flexCheckChecked">
                         Remeber this Device
                       </label>
                     </div>
-                    <a class="text-primary fw-bold" href="./index.html">Forgot Password ?</a>
+                    <a class="text-primary fw-bold" href="{%url 'forgot'%}">Forgot Password ?</a>
                   </div>
-                  <a href="./index.html" class="btn btn-primary w-100 py-8 fs-4 mb-4">Sign In</a>
+                  
+                  <bottom href={% url 'home' %} class="btn btn-primary w-100 py-8 fs-4 mb-4">Sign In</bottom>
+                  <bottom href={% url 'home' %} class="btn btn-danger w-100 py-8 fs-4 mb-4">Google Sing In</bottom>
                   <div class="d-flex align-items-center justify-content-center">
+                    
                     <p class="fs-4 mb-0 fw-bold">New to SeoDash?</p>
-                    <a class="text-primary fw-bold ms-2" href="./authentication-register.html">Create an account</a>
+                    
+                    <a class="text-primary fw-bold ms-2" href="{%url 'register'%}">Create an account</a>
                   </div>
                 </form>
+                
               </div>
             </div>
           </div>
@@ -55,8 +62,8 @@
       </div>
     </div>
   </div>
-  <script src="../assets/libs/jquery/dist/jquery.min.js"></script>
-  <script src="../assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="{% static 'libs/jquery/dist/jquery.min.js'%}"></script>
+  <script src="{% static 'libs/bootstrap/dist/js/bootstrap.bundle.min.js'%}"></script>
   <script src="https://cdn.jsdelivr.net/npm/iconify-icon@1.0.8/dist/iconify-icon.min.js"></script>
 </body>
 
